kubernetes/apps/media/tautulli/app/ingress.yaml
---
# yaml-language-server: $schema=https://github.com/instrumenta/kubernetes-json-schema/raw/refs/heads/master/v1.18.1/ingress.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik-outpost-tautulli
spec:
  ingressClassName: internal
  rules:
    - host: "tautulli.t0m.co"
      http:
        paths:
          - path: /outpost.goauthentik.io
            pathType: Prefix
            backend:
              # Or, to use an external Outpost, create an ExternalName service and reference that here.
              # See https://kubernetes.io/docs/concepts/services-networking/service/#externalname
              service:
                name: ak-outpost-authentik-embedded-outpost
                port:
                  number: 9000
